Fix overflow-y

--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -8,6 +8,7 @@ body,
   width: 100%;
   height: 100%;
   max-width: 100%;
+  overflow: auto;
   overflow-x: hidden;
   margin: 0;
   padding: 0;
@@ -18,7 +19,6 @@ body,
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  overflow: hidden;
 }
 
 body {
